# isoxml-py

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: application_map_types_comparison.md  architecture.md  questions.md
examples/: README.md  app_map_grid_type_1.py  app_map_grid_type_2.py  app_map_grid_type_2_from_shp.py  app_map_vector.py  check_grid_overlay.py  convert_grid_prescription.py  grid_overlay_viewer.ipynb  guidance_pattern.py  guidance_pattern_viewer.ipynb  inspect_shapefile.py  partfield_viewer.ipynb  pathfield_export.py  pycode_generator.py  read_grid_type_2_bin.py  run_app_map_grid_type_1_v4.sh  run_check_grid_overlay.sh  task_validataion.py  task_validation.py  validate_grid_bin.py
examples/application_maps/: __init__.py  app_map_grid_type_1.py  app_map_grid_type_2.py  app_map_vector.py  prepare_test_shp_application_map_geojson.py
examples/bash_script/: run_check_grid_overlay.sh  run_geojson_to_taskdata.sh  run_shp_to_grid_prescription.sh  run_shp_to_taskdata.sh  run_vector_to_taskdata.sh
examples/geometry/: partfield_export.py  partfield_viewer.ipynb
examples/guidance/: guidance_pattern.py  guidance_pattern_viewer.ipynb
examples/input/: test_shp_application_map_with_boundary.geojson
examples/input/big/boundary/: Boundary.dbf  Boundary.shp  Boundary.shx
examples/input/big/shp/: Rx.dbf  Rx.shp  Rx.shx
examples/input/small/boundary/: Boundary.dbf  Boundary.shp  Boundary.shx
examples/input/small/shp/: Rx.dbf  Rx.shp  Rx.shx
examples/input/test_shp/: 20250415_211530.dbf  20250415_211530.shp  20250415_211530.shx
examples/maps/: app_map_grid_type_1.py  app_map_grid_type_2.py  app_map_grid_type_2_from_shp.py  app_map_vector.py  check_grid_overlay.py  read_grid_type_2_bin.py  run_grid_type_2_from_shp.sh  validate_grid_bin.py
examples/tooling/: inspect_shapefile.py  pycode_generator.py  task_validation.py
isoxml/models/: README.md  ddi_entities.py
isoxml/models/base/v2/: __init__.py  asp.py  can.py  crg.py  ctp.py  (+22 more)
resources/: resources.py
src/isoxml/: __init__.py  _optional_deps.py  resources.py  validation.py  xsd_validation.py
src/isoxml/cli/: __init__.py  _common.py  convert_prescription.py  convert_taskdata.py  generate_pycode.py  grid_from_shp.py  inspect_grid.py  inspect_grid_overlay.py  inspect_shapefile.py  inspect_vector.py  prepare_application_map_geojson.py  shp_to_prescription.py  shp_to_taskdata.py  validate_grid_bin.py  validate_taskdata.py  vector_to_taskdata.py
src/isoxml/convert/: __init__.py  v3_to_v4.py  v4_to_v3.py
src/isoxml/converter/: __init__.py  shapely_geom.py
src/isoxml/data/: __init__.py  ddi_entities.json
src/isoxml/geometry/: __init__.py  shapely.py
src/isoxml/grid/: __init__.py  codec.py  convert.py
src/isoxml/grids/: __init__.py  binary.py
src/isoxml/io/: __init__.py  external.py  external_files.py  reader.py  taskdata.py  writer.py
src/isoxml/models/: README.md  __init__.py  ddi.py  ddi_entities.py  version_registry.py
src/isoxml/pipeline/: __init__.py  prescription_converter.py  shp_to_grid.py
src/isoxml/prescriptions/: __init__.py  grid.py
src/isoxml/reference/: update_ddi_registry.py
src/isoxml/util/: __init__.py  external_file.py  isoxml_io.py
src/isoxml/workflows/: __init__.py  grid_from_shp.py
test/converter/: shapely_geom_additional_test.py
test/examples/: app_map_grid_type_2_from_shp_test.py
test/models/: ddi_entities_additional_test.py
test/util/: isoxml_io_additional_test.py
tests/: public_api_test.py  validation_test.py
tests/cli/: convert_prescription_test.py  convert_taskdata_test.py  help_test.py  inspect_grid_overlay_test.py  inspect_grid_test.py  prepare_application_map_geojson_test.py  shp_to_prescription_test.py  shp_to_taskdata_test.py  vector_to_taskdata_test.py
tests/convert/: v3_to_v4_test.py  v4_to_v3_test.py
tests/converter/: np_grid__test.py  shapely_geom__test.py  shapely_geom_additional_test.py
tests/examples/: app_map_grid_type_2_from_shp_test.py
tests/geometry/: shapely_test.py
tests/grid/: codec_test.py  convert_test.py
tests/io/: external_test.py  reader_test.py  writer_test.py
tests/models/: ddi_test.py  task_data_v3_test.py  task_data_v4_test.py
tests/pipeline/: prescription_converter_helpers_test.py  prescription_converter_test.py  shp_to_grid_test.py  shp_to_taskdata_test.py  taskdata_version_converter_helpers_test.py  taskdata_version_converter_test.py  vector_to_taskdata_test.py
tests/prescriptions/: grid_rasterize_test.py  grid_shapefile_test.py  grid_taskdata_test.py
tests/resources/: test_resources.py
tests/util/: external_file_additional_test.py  external_file_test.py  isoxml_io_additional_test.py  isoxml_io_test.py
tests/workflows/: grid_from_shp_test.py
(+93 files in other folders)
