[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"


[project]
name = "isoxml"
version = "0.0.4"
description = "Python ISOXML read/write"
license = {text = "Apache License 2.0"}
authors = [
  { name="Josephinum-Research" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["isoxml", "isobus", "iso", "11783-10", "xml", "precision farming"]

dependencies = [
    "xsdata >= 24.7",
    "numpy >= 1.26",
    "shapely >= 2.0",
]

[project.urls]
Homepage = "https://github.com/Josephinum-Research/isoxml-py"
Issues = "https://github.com/Josephinum-Research/isoxml-py/issues"

[project.optional-dependencies]
# Pipeline extra: shapefile → ISOXML grid conversion
pipeline = [
    "geopandas",
    "xmlschema",
]
# Visualisation / notebook extras (not needed at runtime)
viz = [
    "jupyter",
    "folium",
    "matplotlib",
    "mapclassify",
]
# Code-generation from XSD (developer tooling)
codegen = [
    "xsdata[cli]",
]
# Everything for active development
dev = [
    "isoxml[pipeline,viz,codegen]",
]
test = [
    "pytest",
    "xmlschema",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["isoxml*"]
exclude = ["examples"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"isoxml" = ["data/*", "data/xsd/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
