[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"


[project]
name = "isoxml"
version = "0.0.4"
description = "Python ISOXML read/write"
license = {text = "Apache License 2.0"}
authors = [
  { name="kunzhou" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["isoxml", "isobus", "iso", "11783-10", "xml", "precision farming"]

dependencies = [
    "xsdata >= 24.7",
    "numpy >= 1.26",
    "shapely >= 2.0",
    "geopandas",
    "xmlschema",
]

[project.urls]
Homepage = "https://github.com/kunzhoudk/isoxml-py"
Issues = "https://github.com/kunzhoudk/isoxml-py/issues"

[project.scripts]
isoxml-convert-taskdata = "isoxml.cli.convert_taskdata:main"
isoxml-inspect-grid-overlay = "isoxml.cli.inspect_grid_overlay:main"
isoxml-generate-pycode = "isoxml.cli.generate_pycode:main"
isoxml-inspect-shapefile = "isoxml.cli.inspect_shapefile:main"
isoxml-inspect-grid = "isoxml.cli.inspect_grid:main"
isoxml-shp-to-taskdata = "isoxml.cli.shp_to_taskdata:main"
isoxml-validate-taskdata = "isoxml.cli.validate_taskdata:main"
isoxml-validate-grid-bin = "isoxml.cli.validate_grid_bin:main"

[project.optional-dependencies]
# Visualisation / notebook extras (not needed at runtime)
viz = [
    "jupyter",
    "folium",
    "matplotlib",
    "mapclassify",
]
# Code-generation from XSD (developer tooling)
codegen = [
    "xsdata[cli]",
]
# Everything for active development
dev = [
    "isoxml[viz,codegen]",
]
test = [
    "pytest",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["isoxml*"]
exclude = ["examples"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"isoxml" = ["reference/*", "reference/xsd/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
